# badaya

./: MPU_Kalman_Filter.ino
manipulator3/: CMakeLists.txt  package.xml
manipulator3/launch/: display.launch  gazebo.launch
manipulator3/meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL
manipulator3/urdf/: manipulator3.csv  manipulator3.urdf
manipulator4/: CMakeLists.txt  package.xml
manipulator4/launch/: display.launch  gazebo.launch
manipulator4/meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL
manipulator4/urdf/: manipulator4.csv  manipulator4.urdf
ros16/: CMakeLists.txt  package.xml
ros16/config/: joint_names_ros16.yaml
ros16/launch/: display.launch  gazebo.launch
ros16/meshes/: angkle_left_link.STL  angkle_right_link.STL  base_link.STL  foot_right_link.STL  hip2_left_link.STL  hip2_right_link.STL  hip_left_link.STL  hip_link.STL  hip_right_link.STL  knee_left_link.STL  knee_right_link.STL  waist_link.STL
ros16/urdf/: ros16.csv  ros16.urdf
ros17/: CMakeLists.txt  package.xml
ros17/launch/: display.launch  gazebo.launch
ros17/meshes/: angkle_left_link.STL  angkle_right_link.STL  foot_left_link.STL  foot_right_link.STL  (+5 more)
ros18/: CMakeLists.txt  package.xml
ros18/launch/: display.launch  gazebo.launch
ros18/meshes/: angkle_left_link.STL  angkle_right_link.STL  base_link.STL  foot_left_link.STL  foot_right_link.STL  hip2_right_link.STL  hip_left_link.STL  hip_link.STL  hip_right_link.STL  knee_left_link.STL  knee_right_link.STL  waist_link.STL
ros18/urdf/: ros18.csv  ros18.urdf
ros19/: CMakeLists.txt  package.xml
(+38 files in other folders)
